--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="app">
-        <h1>Simpel Quiz</h1>
+        <h1>Simple Quiz</h1>
         <div class="quiz"></div>
         <h2 id="question">Question goes here</h2>
         <div id="answer-buttons"></div>
