--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="payout-form" style="display:none; margin-top:20px;">
             <input type="text" id="payout-name" placeholder="Full Name" required style="margin-bottom:5px;" />
             <input type="text" id="payout-account" placeholder="Account Number" required style="margin-bottom:5px;" />
-            <input type="text" id="payout-bank" placeholder="Bank Code (e.g. 058)" required style="margin-bottom:5px;" />
+            <input type="text" id="payout-bank" placeholder="Bank Name (e.g. GTBank)" required style="margin-bottom:5px;" />
             <input type="email" id="payout-email" placeholder="Email" required style="margin-bottom:5px;" />
             <button id="submit-payout-btn" style="background:#28a745;color:#fff;padding:8px 16px;border:none;border-radius:4px;">Submit for Payment</button>
         </div>
