--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <button id="next-btn">Next</button>
         <button id="claim-reward-btn" style="display:none; background: #28a745; color: #fff; padding: 10px 20px; border: none; border-radius: 5px; margin-top: 20px;">Claim Reward</button>
         <div id="payout-form" style="display:none; margin-top:20px;">
-            <input type="text" id="payout-name" placeholder="Full Name" required style="margin-bottom:5px;" />
-            <input type="text" id="payout-account" placeholder="Account Number" required style="margin-bottom:5px;" />
-            <select id="payout-bank" required style="margin-bottom:5px;">
+            <input type="text" id="payout-name" placeholder="Full Name" required style="margin-bottom:8px; width:100%; padding:8px; border:1px solid #ccc; border-radius:4px; font-size:16px; background:#f8f9fa; color:#333; transition:border-color 0.2s;" />
+            <input type="text" id="payout-account" placeholder="Account Number" required style="margin-bottom:8px; width:100%; padding:8px; border:1px solid #ccc; border-radius:4px; font-size:16px; background:#f8f9fa; color:#333; transition:border-color 0.2s;" />
+            <select id="payout-bank" required style="margin-bottom:5px; width:100%; padding:8px; border:1px solid #ccc; border-radius:4px; font-size:16px; background:#f8f9fa; color:#333; transition:border-color 0.2s;">
                 <option value="">Select Bank</option>
                 <option value="Access Bank">Access Bank</option>
                 <option value="Citibank">Citibank</option>
@@ -42,8 +42,8 @@
                 <option value="Wema Bank">Wema Bank</option>
                 <option value="Zenith Bank">Zenith Bank</option>
             </select>
-            <input type="email" id="payout-email" placeholder="Email" required style="margin-bottom:5px;" />
-            <button id="submit-payout-btn" style="background:#28a745;color:#fff;padding:8px 16px;border:none;border-radius:4px;">Submit for Payment</button>
+            <input type="email" id="payout-email" placeholder="Email" required style="margin-bottom:12px; width:100%; padding:8px; border:1px solid #ccc; border-radius:4px; font-size:16px; background:#f8f9fa; color:#333; transition:border-color 0.2s;" />
+            <button id="submit-payout-btn" style="background:linear-gradient(90deg,#28a745 0%,#218838 100%);color:#fff;padding:10px 0;border:none;border-radius:5px;font-size:17px;width:100%;font-weight:600;box-shadow:0 2px 8px rgba(40,167,69,0.08);transition:background 0.2s;cursor:pointer;">Submit for Payment</button>
         </div>
     </div>
 
