--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <option value="Zenith Bank">Zenith Bank</option>
             </select>
             <input type="email" id="payout-email" placeholder="Email" required style="margin-bottom:12px; width:100%; padding:8px; border:1px solid #ccc; border-radius:4px; font-size:16px; background:#f8f9fa; color:#333; transition:border-color 0.2s;" />
-            <button id="submit-payout-btn" style="background:linear-gradient(90deg,#28a745 0%,#218838 100%);color:#fff;padding:10px 0;border:none;border-radius:5px;font-size:17px;width:100%;font-weight:600;box-shadow:0 2px 8px rgba(40,167,69,0.08);transition:background 0.2s;cursor:pointer;">Submit for Payment</button>
+            <button id="submit-payout-btn" style="background:linear-gradient(90deg,#001e4d 0%,#001e4d 100%);color:#fff;padding:10px 0;border:none;border-radius:5px;font-size:17px;width:100%;font-weight:600;box-shadow:0 2px 8px rgba(40,167,69,0.08);transition:background 0.2s;cursor:pointer;">Submit for Payment</button>
         </div>
     </div>
 
