--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@
                 padding: 15px;
                 overflow-y: auto;
                 background: #f8f9fa;
+                font-size: 14px;
+                line-height: 1.4;
             ">
                 <div class="ai-message" style="
                     background: white;
