--- a/test-payout.html
+++ b/test-payout.html
@@ -43,9 +43,9 @@
             resultDiv.innerHTML = 'Testing...';
             
             try {
-                console.log('Submitting to: http://localhost:4000/manual-payout');
+                console.log('Submitting to: https://quiz-appi.onrender.com/manual-payout');
                 
-                const response = await fetch('http://localhost:4000/manual-payout', {
+                const response = await fetch('https://quiz-appi.onrender.com/manual-payout', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
