--- a/admin-codes.html
+++ b/admin-codes.html
@@ -350,7 +350,7 @@
                 const quizUrl = baseUrl + '/index.html';
                 
                 // Send real email using Node.js server
-                fetch('http://localhost:4000/send-email', {
+                fetch('https://quiz-appi.onrender.com/send-email', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -494,7 +494,7 @@
                         const button = this;
                         
                         // Send real email using Node.js server
-                        fetch('http://localhost:4000/send-email', {
+                        fetch('https://quiz-appi.onrender.com/send-email', {
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json',
