--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
     <div class="auth-shell">
         <div class="auth-card">
             <div class="auth-brand">
-                <div class="auth-logo auth-logo--alt">QC</div>
+                <div class="auth-logo auth-logo--alt">QA</div>
                 <div>
                     <div class="auth-title">Create your account</div>
                     <div class="auth-subtitle">Sign up to access the quiz.</div>
